--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
 
 <body>
 
-  <form>
+  <form id="zipcodeform">
 
     <label for="zipcodeinput">Your ZIP code:</label>
     <input type="text" id="zipcodeinput">
+    <input type="submit" value="Submit">
+
+  </form>
+
+  <form>
+
+    <label for="topicform">Your ZIP code:</label>
+    <input type="text" id="topicinput">
     <input type="submit" value="Submit">
 
   </form>
