--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <form>
 
-    <label for="topicform">Your ZIP code:</label>
+    <label for="topicform">Topic:</label>
     <input type="text" id="topicinput">
     <input type="submit" value="Submit">
 
