--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
 
   <div id="statementFeed">
     <h2>Press Releases:</h2>
+    
+      <div class="release">
+        <h3>Title</h3>
+        <p>0000-00-00</p>
+        <a href="#">Click here to read more.</a>
+      </div>
+
+      <div class="release">
+        <h3>Title</h3>
+        <p>0000-00-00</p>
+        <a href="#">Click here to read more.</a>
+      </div>
+
   </div>
 
 </section>
